fix: Avoid shelf flicker on initial load

--- a/src/styles/angular-snap.less
+++ b/src/styles/angular-snap.less
@@ -65,4 +65,16 @@
   }
 }
 
+// Fix for shelf flickering? Can clean up some redundant styles above if this
+// works well
+[snap\:content], [snap-content], [data-snap-content], [x-snap-content], .snap-content, .x-snap-content,
+[snap\:shelves], [snap-shelves], [data-snap-shelves], [x-snap-shelves], .snap-shelves, .x-snap-shelves,
+[snap\:shelf], [snap-shelf], [data-snap-shelf], [x-snap-shelf], .snap-shelf, .x-snap-shelf {
+  .absolute;
+}
 
+[snap\:content], [snap-content], [data-snap-content], [x-snap-content], .snap-content, .x-snap-content,
+[snap\:shelves], [snap-shelves], [data-snap-shelves], [x-snap-shelves], .snap-shelves, .x-snap-shelves {
+  .tall;
+  .wide;
+}
